# lambdapi-zenon

./: AUTHORS.md  Implem.lp  Main.lp  README.md  lambdapi-zenon.opam
.github/workflows/: main.yml
