opam-version: "2.0"
synopsis: "Lambdapi logic used by the automated theorem prover ZenonModulo"
description: """
Lambdapi logic used by the automated theorem prover ZenonModulo
"""
maintainer: ["frederic.blanqui@inria.fr"]
authors: ["Frédéric Blanqui"]
license: "CECILL-2.1"
homepage: "https://github.com/Deducteam/lambdapi-zenon"
bug-reports: "https://github.com/Deducteam/lambdapi-zenon/issues"
dev-repo: "git+https://github.com/Deducteam/lambdapi-zenon.git"
build: [ make ]
install: [ make "install" ]
depends: [
  "lambdapi" {>= "2.3.0"}
  "lambdapi-stdlib" {>= "1.1.0"}
]
